# tinyalsa-cxx

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  tinyalsa.cpp  tinyalsa.hpp
examples/: CMakeLists.txt  Makefile  input.cpp  interleaved_reader.cpp  pcminfo.cpp  pcmlist.cpp
include/tinyalsa/: CMakeLists.txt  config.hpp  input-pcm.hpp  interleaved_reader.hpp  output-pcm.hpp  pcm.hpp  sample-type.hpp  types.hpp
src/: CMakeLists.txt  Makefile  config.cpp  input-pcm.cpp  interleaved_reader.cpp  pcm.cpp
